--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mailparser": "^3.5.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
     "node-cron": "^3.0.2",
     "node-imap": "^0.9.6",
     "nodemailer": "^6.8.0",
