--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-node_modules
+
+resources/st
+
+errors.log
+/public
+build.sh
 package-lock.json
 config/
-resources/static/assets/download/*
-resources/static/assets/uploads/*
-errors.log
+atic/assets/download/*
+resources/static/assets/uploads/
 __test__/
 f-admin/
-/public
-public/*
-build.sh
+node_modules
+
