--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "imap": "^0.8.19",
     "jsonwebtoken": "^8.5.1",
     "mailparser": "^3.5.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node-imap": "^0.9.6",
@@ -47,5 +48,5 @@
   },
   "engines": {
     "node": "22.11.0"
-   }
+  }
 }
