--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,7 @@ PORT = 8000
 NODE_ENV = DEVELOPMENT
 
 JWT_SECRET = GSDSFDSKJDSAJDYUYEREKJRLJCJXZLKJCUDISA
-JWT_EXPIRES_TIME = 7d
+JWT_EXPIRES_TIME = 2h
 
 EMAIL_USER = adarsh10201.@gmail.com
 EMAIL_PASS = bakvkmyithocvmot
