--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+      "mysql2": "^3.14.3",
     "node-imap": "^0.9.6",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.16",
